<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lsy.weatherproject.SettingActivity">


    <TextView
        android:id="@+id/settingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="SETTING"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/daysText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/settingsText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/days"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/settingsText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/daysText"></Spinner>

    <TextView
        android:id="@+id/gText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/daysText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/GPS"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <Switch
        android:id="@+id/gpsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/daysText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@+id/gText"
        android:showText="true"
        android:switchTextAppearance="@style/mSwitch"
        android:textOff="GPSOFF"
        android:textOn="GPSON"
        android:textStyle="bold"
        android:thumb="@drawable/background"
        android:thumbTextPadding="5dp"
        />

    <TextView
        android:id="@+id/zipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/zipCode"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/inputZipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/zipText"
        android:layout_alignParentRight="true"
        android:layout_below="@id/gText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="20006"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textScaleX="1.5"
        android:textSize="10sp"
        android:textStyle="normal"
        />

    <TextView
        android:id="@+id/unitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/zipText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/CorF"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/unitText"
        android:layout_below="@+id/inputZipText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:checked="true"
        android:showText="true"
        android:switchTextAppearance="@style/mSwitch"
        android:textOff="@string/Fah"
        android:textOn="@string/Cel"
        android:textStyle="bold"
        android:thumb="@drawable/background"
        android:thumbTextPadding="5dp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@string/con"
        android:text="CONFIRM"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"/>

</RelativeLayout>
